# ME700HW2

./: README.md  assignment_2genAIuse.txt  pyproject.toml
.github/workflows/: tests.yml
files/: Direct_Stiffness_Method.py  Direct_Stiffness_Methodd.py  Example2_FrameBuckling.py  example.ipynb  example1_CodeReview.ipynb  example1_EulerBuckling.ipynb  example2_CodeReview.ipynb  example2_FrameBuckling.ipynb  example_template.ipynb  functionss.py  ino.ipynb  json.ipynb  prob1.py  test_Direct_Stiffness_Method.py
src/: Direct_Stiffness_Method.py  Elastic_Critical_Solver.py  checing.ipynb  example.py  example1_part1.py  example1_part2.py  example2_part1.py  example_part2  example_part2.py  functions.py  problem3.py  test_function.py  tutorial.ipynb  tutorial.py
